finish styling header section including scroll effect on enter button click

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <head>
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <script src="https://use.fontawesome.com/e44e56f879.js"></script>
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>connor larsen dot com</title>
   </head>
   <body>
     <header>
-      <p>connorlarsen</p>
-      <button>enter</button>
+      <div class="name">
+        <p>connorlarsen</p>
+      </div>
+      <button class="enter">enter</button>
     </header>
     <nav>
       <p>cl</p>
@@ -46,6 +50,11 @@
       <div class="photo-group"><a href="#">
         <img src="img/thailand.png" alt="Flavors of Thailand">
         <p>flavors of thailand</p>
+      </a>
+      </div>
+      <div class="photo-group"><a href="#">
+        <img src="img/packpartout.png" alt="Packpartout">
+        <p>packpartout</p>
       </a>
       </div>
       <div class="photo-group"><a href="#">
