style animation effects on nav bar

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
       </div>
       <button class="enter">enter</button>
     </header>
-    <nav>
-      <p>cl</p>
+    <nav class="nav-bar">
+      <p><a href="#">cl</a></p>
       <ul>
-        <li>bio</li>
-        <li>projects</li>
-        <li>contact</li>
+        <li><a href="#">bio</a></li>
+        <li><a href="#">projects</a></li>
+        <li><a href="#">contact</a></li>
       </ul>
     </nav>
+    <div class="stickyalias"></div>
     <div class="bio">
       <img src="img/profile_pic.jpg" alt="Connor Larsen">
       <div class="bio-text">
