create hamburger menu for mobile view that transitions to an x when clicked

--- a/index.html
+++ b/index.html
@@ -10,13 +10,19 @@
   </head>
   <body>
     <header>
-      <div class="name">
-        <p>connorlarsen</p>
+      <p>connorlarsen</p>
+      <div class="button-container">
+        <button class="enter">enter</button>
       </div>
-      <button class="enter">enter</button>
     </header>
     <nav class="nav-bar">
       <p><a href="#">cl</a></p>
+      <div id="nav-icon">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <ul>
         <li><a href="#">bio</a></li>
         <li><a href="#">projects</a></li>
