--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
         <p>I specialize in creating digital experiences. I help consumers connect with brands, products, and services through UX/UI design and front end development.</p>
         <p>I make money so I can travel and buy shoes.<br>Way too many shoes.</p>
         <p>Let’s build something amazing together. </p>
-        <i class="fa fa-github" aria-hidden="true"></i>
-        <i class="fa fa-instagram" aria-hidden="true"></i>
-        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+        <div class="social">
+          <i class="fa fa-github" aria-hidden="true"></i>
+          <i class="fa fa-instagram" aria-hidden="true"></i>
+          <i class="fa fa-envelope-o" aria-hidden="true"></i>
+        </div>
       </div>
-      <i class="fa fa-chevron-down" aria-hidden="true"></i>
+      <i class="chevron fa fa-chevron-down" aria-hidden="true"></i>
     </div>
     <div class="projects">
       <p>I love creating stunning web experiences</p>
