beging styling projects section for mobile view

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <i class="chevron fa fa-chevron-down" aria-hidden="true"></i>
     </div>
     <div class="projects">
-      <p>I love creating stunning web experiences</p>
+      <p>I love creating stunning web experiences...</p>
       <div class="photo-group"><a href="#">
         <img src="img/hotel.png" alt="Fancy Hotel concept">
         <p>fancy hotel concept</p>
@@ -75,7 +75,7 @@
         <p>travel therapy</p>
         </a>
       </div>
-      <i class="fa fa-chevron-down" aria-hidden="true"></i>
+      <i class="chevron fa fa-chevron-down" aria-hidden="true"></i>
     </div>
   </body>
 </html>
