finish styling projects section for mobile view and begin styling on tablet view

--- a/index.html
+++ b/index.html
@@ -45,37 +45,52 @@
     </div>
     <div class="projects">
       <p>I love creating stunning web experiences...</p>
-      <div class="photo-group"><a href="#">
-        <img src="img/hotel.png" alt="Fancy Hotel concept">
-        <p>fancy hotel concept</p>
+      <div class="all-projects">
+        <div class="photo-group"><a href="#">
+          <img src="img/hotel.png" alt="Fancy Hotel concept">
+          <p>fancy hotel | travel/tourism</p><br>
+          <p>A website mock-up for a fictional hotel group</p>
         </a>
-      </div>
-      <div class="photo-group"><a href="#">
-        <img src="img/oregon-wild.png" alt="Oregon Wild">
-        <p>oregon wild</p>
+        <hr>
+        </div>
+        <div class="photo-group"><a href="#">
+          <img src="img/oregon-wild.png" alt="Oregon Wild">
+          <p>oregon wild | recreation</p><br>
+          <p>Website recreation for an outdoor recreation company</p>
+          </a>
+          <hr>
+        </div>
+        <div class="photo-group"><a href="#">
+          <img src="img/packpartout.png" alt="Packpartout">
+          <p>packpartout | travel/tourism</p><br>
+          <p>A dynamic packing list generator</p>
         </a>
+        <hr>
       </div>
-      <div class="photo-group"><a href="#">
-        <img src="img/thailand.png" alt="Flavors of Thailand">
-        <p>flavors of thailand</p>
-      </a>
-      </div>
-      <div class="photo-group"><a href="#">
-        <img src="img/packpartout.png" alt="Packpartout">
-        <p>packpartout</p>
-      </a>
-      </div>
-      <div class="photo-group"><a href="#">
-        <img src="img/green-thumb.png" alt="Green Thumb Planters">
-        <p>green thumb planters</p>
+        <div class="photo-group"><a href="#">
+          <img src="img/thailand.png" alt="Flavors of Thailand">
+          <p>flavors of thailand | information</p><br>
+          <p>A dedication to the best cuisine in the world</p>
+          </a>
+          <hr>
+        </div>
+        <div class="photo-group"><a href="#">
+          <img src="img/green-thumb.png" alt="Green Thumb Planters">
+          <p>green thumb | ecommerce</p><br>
+          <p>A retail page for a fictional garden supply store</p>
         </a>
-      </div>
-      <div class="photo-group"><a href="#">
-        <img src="img/travel-therapy.png" alt="Travel Therapy">
-        <p>travel therapy</p>
+        <hr>
+        </div>
+        <div class="photo-group"><a href="#">
+          <img src="img/travel-therapy.png" alt="Travel Therapy">
+          <p>travel therapy | blog/ecommerce</p><br>
+          <p>A travel blog that incorporates articles and ecommerce</p>
         </a>
+        </div>
       </div>
-      <i class="chevron fa fa-chevron-down" aria-hidden="true"></i>
+    </div>
+    <div class="contact">
+      <p>get in touch</p>
     </div>
   </body>
 </html>
