style footer for mobile, tablet, and desktop

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="photo-group"><a href="#">
           <img src="img/oregon-wild.png" alt="Oregon Wild">
-          <p>oregon wild | recreation</p><br>
+          <p>oregon wild | travel/tourism</p><br>
           <p>Website recreation for an outdoor recreation company</p>
           </a>
           <hr>
@@ -89,8 +89,14 @@
         </div>
       </div>
     </div>
-    <div class="contact">
-      <p>get in touch</p>
-    </div>
+    <footer>
+      <div class="button-container">
+        <button>get in touch</button>
+      </div>
+      <div class="social">
+        <i class="fa fa-github" aria-hidden="true"></i>
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+      </div>
+    </footer>
   </body>
 </html>
