finish scroll animations on link and chevron clicks

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
         <span></span>
       </div>
       <ul>
-        <li><a href="#">bio</a></li>
-        <li><a href="#">projects</a></li>
-        <li><a href="#">contact</a></li>
+        <li><a class="bio-link">bio</a></li>
+        <li><a class="projects-link">projects</a></li>
       </ul>
     </nav>
     <div class="bio">
@@ -44,7 +43,7 @@
       <i class="chevron fa fa-chevron-down" aria-hidden="true"></i>
     </div>
     <div class="projects">
-      <p>I love creating stunning web experiences...</p>
+      <p class="projects-top">I love creating stunning web experiences...</p>
       <div class="all-projects">
         <div class="photo-group"><a href="#">
           <img src="img/hotel.png" alt="Fancy Hotel concept">
