change filenames/calls in files

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </ul>
     </nav>
     <div class="bio">
-      <img src="img/profile_pic.jpg" alt="Connor Larsen">
+      <img src="img/profile_pic.JPG" alt="Connor Larsen">
       <div class="bio-text">
         <p>I specialize in creating digital experiences. I help consumers connect with brands, products, and services through UX/UI design and front end development.</p>
         <p>I make money so I can travel and buy shoes.<br>Way too many shoes.</p>
@@ -53,7 +53,7 @@
         <hr>
         </div>
         <div class="photo-group"><a href="#">
-          <img src="img/oregon-wild.png" alt="Oregon Wild">
+          <img src="img/oregon-wild.PNG" alt="Oregon Wild">
           <p>oregon wild | travel/tourism</p><br>
           <p>Website recreation for an outdoor recreation company</p>
           </a>
