attempt fixed background solve on header using jquery

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <header>
+      <div class="bg"></div>
       <p>connorlarsen</p>
       <div class="button-container">
         <button class="enter">enter</button>
