use refills to create paralax effect on header background img

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
   </head>
   <body>
     <header>
-      <div class="bg"></div>
-      <p>connorlarsen</p>
-      <div class="button-container">
-        <button class="enter">enter</button>
+      <div id="js-parallax-window" class="parallax-window">
+        <div class="parallax-static-content">
+          <p>connorlarsen</p>
+          <div class="button-container">
+            <button class="enter">enter</button>
+          </div>
+        </div>
+      <div id="js-parallax-background" class="parallax-background"></div>
       </div>
     </header>
     <nav class="nav-bar">
